--- a/test/fixtures/profiles.yml
+++ b/test/fixtures/profiles.yml
@@ -1,11 +1,11 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  location: MyString
   username: MyString
-  user: one
+  location: MyString
+  rating: 1
 
 two:
-  location: MyString
   username: MyString
-  user: two
+  location: MyString
+  rating: 1
